# volthium_reader

./: .gitignore  Launch Volthium Monitor.command  Makefile  README.md  battery_side-erc.rpt  display_side-erc.rpt  pack.env  requirements-hw.txt  requirements.txt
.reviewer_automation/: next_due_epoch
data/: README.md  ble_events.jsonl  ble_health.jsonl  calibration_log.csv  confidence_log.csv  daily_summary.csv  live_ratio_log.csv  pack.csv  pack.csv.cloud_state  pack.csv.v0-1512  projection_log.csv  solar_onset.csv  voltage_soc_table.csv  weather.csv
docs/: RUNBOOK.md  STATUS.md  STATUS_archive.md  cloud_architecture.md  production_design.md  reliability_failure_modes.md
firmware/bms-link/main/: CMakeLists.txt  adc_task.c  ble_task.c  main.c  main.h  power_task.c  tx_task.c
firmware/common/volthium_lib/: CMakeLists.txt  Makefile  README.md  estimator.c  estimator.h  test_cross_validation.c  test_estimator.c  test_estimator_cross.c  test_wire_protocol.c  wire_protocol.c  wire_protocol.h
firmware/common/volthium_lib/test_vectors/: estimator_scenarios.txt  expected.txt
scripts/: analyze.py  ble_watchdog.py  calibration_log.py  capacity_calc.py  confidence_log.py  daily_summary.py  dashboard.py  discharge_model.py  end_of_day_report.py  gen_estimator_vectors.py  gen_test_vectors.py  generator_advisor.py  health.py  install_desktop_launcher.sh  live_ratio_log.py  log.py  low_soc_accuracy.py  monitor.py  preflight_cloud.sh  projection_accuracy.py  projection_log.py  read_once.py  reviewer_automation.sh  reviewer_watch.sh  scan.py  solar_onset.py  today_harvest.py  (+2 more)
(+211 files in other folders)
